feat: Implementación del botón de WhatsApp con diseño mejorado

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -40,6 +40,8 @@
     {% if template.name == 'index' %}
       {% render 'section-scroll-nav' %}
     {% endif %}
+    
+    {% render 'social-floating-nav' %}
 
     {% sections 'footer-group' %}
   </body>
